# distgen

./: setup.cfg  setup.py
distgen/: cli_parser.py
