[metadata]
name = distgen
version = 2.0
author = Red Hat Databases team
description = Templating system/generator for distributions
long_description = file: README.md
license = GPLv2+
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)

[options]
include_package_data = True
packages = find:
python_requires = >=3.0
install_requires = 
    importlib-metadata
    distro
    jinja2
    pyyaml
    setuptools

[options.package_data]
distgen = distconf/*.yaml, distconf/**/*.yaml, templates/*.tpl, templates/**/*.tpl, templates/**/**/*.tpl

[options.packages.find]
exclude =
    rpm*
    man*
    build_manpages*

[options.entry_points]
console_scripts =
    dg = distgen.__main__:main

[build_manpages]
manpages =
    man/dg.1:object=parser:pyfile=distgen/cli_parser.py

[flake8]
ignore=
    # E402 module level import not at top of file
    E402,
    C0116
max-complexity=15